# learn_swig_cmake

./: CMakeLists.txt  README.md
swigdemo/: CMakeLists.txt  alib.i
swigdemo/alib/: CMakeLists.txt  alib.cc  alib.h
tutorial/: CMakeLists.txt  csharp.cmake  example.c  example.i  java.cmake  main.cs  python.cmake
